# home-assistant-vimar

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Contribute.md  README.md  __init__.py  blind.py  climate.py  config_flow.py-not-in-use  const.py  cover.py  hacs.json  light.py  manifest.json  media_player.py  pyproject.toml  pyrightconfig.json  reproduce_state.py  requirements.txt  requirements_dev.txt  sensor.py  switch.py  venv-create  vimar_entity.py  vimarlink.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  installation-problem.md
.github/workflows/: lint.yml  release.yml  tests.yml  validate.yml
custom_components/vimar/: __init__.py  alarm_control_panel.py  binary_sensor.py  climate.py  config_flow.py  const.py  cover.py  humidifier.py  icons.json  light.py  manifest.json  media_player.py  reproduce_state.py  scene.py  sensor.py  services.yaml  strings.json  switch.py  vimar_coordinator.py  vimar_device_customizer.py  vimar_entity.py
custom_components/vimar/translations/: README.md  de.json  en.json  es.json  fr.json  it.json  nl.json  pt.json
custom_components/vimar/vimarlink/: __init__.py  connection.py  const.py  device_queries.py  exceptions.py  http_adapter.py  sql_parser.py  vimarlink.py  vimarlink_auth.py  vimarlink_exceptions.py  vimarlink_protocol_async.py
examples/: credentials.cfg.dist  example.py
tests/: __init__.py
tests/integration/: test_climate_state_writes.py
tests/unit/: __init__.py  test_entity_id_stability.py  test_exceptions.py  test_standalone_import.py
